# canvas-ledger

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
docs/: pdd.md
specs/000-canvas-ledger-core/: plan.md  tasks.md
src/cl/: __init__.py
src/cl/annotations/: __init__.py  manager.py  models.py
src/cl/canvas/: __init__.py  client.py
src/cl/cli/: __init__.py  annotate_cmd.py  config_cmd.py  db_cmd.py  export_cmd.py  ingest_cmd.py  main.py  query_cmd.py
src/cl/config/: __init__.py  secrets.py  settings.py
src/cl/export/: __init__.py  formatters.py
src/cl/ledger/: __init__.py  ingest.py  models.py  queries.py  store.py
src/cl/migrations/: env.py  script.py.mako
src/cl/migrations/versions/: 001_initial_ingest_run.py  002_catalog_tables.py  003_annotation_tables.py
tests/: __init__.py
tests/integration/: test_annotation_survival.py  test_db_setup.py  test_my_timeline.py
tests/unit/: test_annotations.py  test_canvas_client.py  test_config.py  test_ingest_catalog.py
